--- a/trunk/Portal/media/skins/Gold/portalSkins/portalSkins.css
+++ b/trunk/Portal/media/skins/Gold/portalSkins/portalSkins.css
@@ -1,7 +1,4 @@
-﻿
-
-
-/* Window "light" */
+﻿/* Window "light" */
 .light-window
 {
 	display:block;
@@ -80,131 +77,4 @@
 {
 	background: transparent url(light-window-vert.png) repeat-x 0 -40px;
 	height:40px;
-}
-
- 
- 
-
-
-/* TabControl "light" */
-.tab-light
-{
-}
-
-.tab-light .tab-header
-{
-	margin-bottom:-1px;
-}
-
-.tab-light .tab-header ul
-{
-}
-
-.tab-light .tab-header ul li
-{
-	display:inline;
-	padding-left:7px;
-}
-
-.tab-light .tab-header ul li.first
-{
-	margin-left: 3px;
-	padding-left:2px;
-}
-
-.tab-light .tab-header ul li a
-{
-	text-decoration:none;
-	color:#777;
-	padding:5px 0 5px 0;
-}
-
-.tab-light .tab-header ul li a:hover
-{
-	color:#00f;
-	background-color:Transparent;
-}
-
-.tab-light .tab-header ul li.tab-disabled a
-{
-	color:#faa;
-	cursor:default;
-}
-
-.tab-light .tab-header ul li.tab-disabled a:hover
-{
-	color:#f99;
-}
-
-.tab-light .tab-header ul li.active  a
-{
-	text-decoration: none;
-	color:#000000;
-	padding:5px 0 5px 0;
-}
-
-.tab-light .tab-header ul li span
-{
-	display:inline-block;
-	padding-top:5px;
-}
-
-.tab-light .tab-header ul li span.left 
-{
-	background:Transparent url('window-sprite-dark.png') no-repeat 0 0;
-	padding-left:10px;
- 	border-bottom:solid 1px #76B4E0;
- }
-
-.tab-light .tab-header ul li span.center
-{
-	background: Transparent url('window-sprite-dark.png') repeat-x 0 -52px;
-	border-bottom:solid 1px #76B4E0;
-}
-
-.tab-light .tab-header ul li span.right
-{
-	background:Transparent url('window-sprite-dark.png') no-repeat 0 -26px;
-	padding-right:6px;
- 	border-bottom:solid 1px #76B4E0;
-}
-
-.tab-light .tab-header ul li.active a
-{
-	cursor:default;
-}
-
-.tab-light .tab-header ul li.active a:hover
-{
-	color:inherit;
-}
-
-.tab-light .tab-header ul li.active span.left
-{
-	border-bottom:solid 1px #E6F4FF;
-}
-
-.tab-light .tab-header ul li span.center
-{
-	margin-left: -8px;
-}
-
-.tab-light .tab-header ul li.active span.center
-{
-	border-bottom:solid 1px #E6F4FF;
-}
-
-.tab-light .tab-header ul li.active span.right
-{
-	background: Transparent url('window-sprite-dark.png') no-repeat 0 -26px;
-	border-bottom:solid 1px #E6F4FF;
-}
-
-.tab-light .content
-{
-	background-color: #E6F4FF;
-	border-top: solid 1px #76B4E0;
-	border-left: solid 1px #76B4E0;
-	border-right: solid 1px #76B4E0;
-	border-bottom: solid 1px #76B4E0;
 }
