--- a/trunk/Portal/media/RaAjaxOrg.css
+++ b/trunk/Portal/media/RaAjaxOrg.css
@@ -2,7 +2,7 @@
 .headerLogoBg
 {
 	height:280px;
-	background:url('ajax.png') no-repeat 0 0;
+	background:transparent url(ajax.png) no-repeat 0 0;
 	width:1024px;
 	position:relative;
 	margin-bottom:12px;
@@ -18,5 +18,5 @@
 
 .logoRaBrix a
 {
-	background-image:url(logo.png);
+	background-image:url(ra-ajax-logo.png);
 }
