--- a/trunk/Portal/media/skins/Gold/main.css
+++ b/trunk/Portal/media/skins/Gold/main.css
@@ -79,14 +79,6 @@ a.noHoverLink:hover
 	border: none 0;
 }
 
-.logo
-{
-	width: 170px;
-	height: 89px;
-	display: block;
-	background: Transparent url(Images/Logo.png) no-repeat 0 0;
-}
-
 .dynamic-content
 {
 	height: 100%;
@@ -219,7 +211,7 @@ a.disabled
 	right: 15px;
 	width: 80px !important;
 	margin-bottom: 5px;
-	background: White url(filter-icon.png) no-repeat 0 0;
+	background: White url(Images/filter-icon.png) no-repeat 0 0;
 	border: solid 1px #99e;
 	padding-left: 15px;
 }
@@ -463,7 +455,7 @@ h3.edit
 	color: Blue;
 	cursor: pointer;
 	padding-left: 20px;
-	background: Transparent url(editable.png) no-repeat 0 0;
+	background: Transparent url(Images/editable.png) no-repeat 0 0;
 }
 
 div.edit:hover,
@@ -497,7 +489,7 @@ h3.edit textarea
 .filter
 {
 	width: 80px !important;
-	background: White url(filter-icon.png) no-repeat 0 0;
+	background: White url(Images/filter-icon.png) no-repeat 0 0;
 	border: solid 1px #99e;
 	padding-left: 15px;
 	color: #777;
@@ -905,7 +897,7 @@ tr.strike td
 
 .treeMenuSearchWrapper
 {
-	background: Transparent url(tree-search-background.png) no-repeat 0 bottom;
+	background: Transparent url(Images/tree-search-background.png) no-repeat 0 bottom;
 	z-index: 100;
 	height: 25px;
 	position: absolute;
@@ -936,14 +928,34 @@ tr.strike td
 
 .wait-gif
 {
-	background: Transparent url(wait.gif) no-repeat 0 0;
-	position: absolute;
-	top: 25px;
-	left: 50%;
-	width: 70px;
-	height: 70px;
-	z-index: 2000;
-	display: block;
+	z-index:1500;
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	background-color:Black;
+	color:#ddf;
+	font-size:32px;
+}
+
+.wait-gif .image
+{
+	background: Transparent url(Images/wait.gif) no-repeat 0 0;
+	display:table;
+	margin-left:auto;
+	margin-right:auto;
+	margin-top:25px;
+	width:220px;
+	height:19px;
+}
+
+.wait-gif .text
+{
+	display:table;
+	margin-left:auto;
+	margin-right:auto;
+	margin-top:25px;
 }
 
 
@@ -1140,7 +1152,7 @@ span.buttonFlat
 .headerLogoBg
 {
 	height:300px;
-	background:url(sun_background.jpg) no-repeat 0 0;
+	background:url(Images/sun_background.jpg) no-repeat 0 0;
 	width:1024px;
 	position:relative;
 }
@@ -1156,7 +1168,7 @@ span.buttonFlat
 
 .logoImg
 {
-	background:Transparent url(logo.png) no-repeat 0 0;
+	background:Transparent url(Images/logo.png) no-repeat 0 0;
 	display:block;
 	width:100%;
 	height:100%;
@@ -1206,7 +1218,7 @@ span.buttonFlat
 	display:inline-block;
 	width:48px;
 	height:48px;
-	background:Transparent url(resource-icons.png) no-repeat 0 0;
+	background:Transparent url(Images/resource-icons.png) no-repeat 0 0;
 }
 
 .specificResource-mp3
@@ -1695,7 +1707,7 @@ a.bookmarks
 .docsList li.xx_enum
 {
 	list-style-type:none;
-	background-image:url(code-icons.png);
+	background-image:url(Images/code-icons.png);
 	background-repeat:no-repeat;
 	padding-left:20px;
 	margin-left:5px;
