--- a/trunk/Portal/media/skins/Gold/Gold/Gold.css
+++ b/trunk/Portal/media/skins/Gold/Gold/Gold.css
@@ -44,7 +44,7 @@ input[type=checkbox]{margin-right:3px;vertical-align:sub;}
 
 
 /*
-Copyright (c) 2008, Thomas Hansen
+Copyright (c) 2008 - 2010, Thomas Hansen
 Code licensed under GPL3
 http://ra-ajax.org
 */
