--- a/trunk/Portal/media/skins/Gold/Gold.css
+++ b/trunk/Portal/media/skins/Gold/Gold.css
@@ -545,14 +545,14 @@ h3.edit textarea
 
 .clicked .bCenter span
 {
-	background: url(steel/sprites.png) no-repeat -3px -750px;
+	background: url(Gold/sprites.png) no-repeat -3px -750px;
 	padding-left: 17px;
 	height:12px;
 }
 
 .clicked-backwards .bCenter span
 {
-	background:transparent url(steel/sprites.png) no-repeat -3px -761px;
+	background:transparent url(Gold/sprites.png) no-repeat -3px -761px;
 	padding-left: 17px;
 	height:12px;
 }
@@ -560,7 +560,7 @@ h3.edit textarea
 .deleteBtn
 {
 	display: block;
-	background:Transparent url(steel/sprites.png) no-repeat 0 -1248px;
+	background:Transparent url(Gold/sprites.png) no-repeat 0 -1248px;
 	width: 16px;
 	height: 16px;
 	margin-right:3px;
@@ -568,7 +568,7 @@ h3.edit textarea
 
 a.deleteBtn:hover
 {
-	background:Transparent url(steel/sprites.png) no-repeat 0 -1264px;
+	background:Transparent url(Gold/sprites.png) no-repeat 0 -1264px;
 	text-decoration:none !important;
 }
 
@@ -1720,12 +1720,12 @@ a.bookmarks
 
 .tree .hasSample .icon
 {
-	background:url(steel/sprites.png) no-repeat 0 -1184px;
+	background:url(Gold/sprites.png) no-repeat 0 -1184px;
 }
 
 .tree .noSample .icon
 {
-	background:url(steel/sprites.png) no-repeat 0 -1168px;
+	background:url(Gold/sprites.png) no-repeat 0 -1168px;
 }
 
 /* Window "light" */
